[package]
name = "nekohash"
version = "0.1.0"
edition = "2021"
authors = ["keirancc"]
description = "A multifaceted hashing library for Rust"
license = "MIT"
repository = "https://github.com/keirancc/nekohash"
keywords = ["hash", "anime", "cryptography"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
rand = "0.8"
aes = "0.8.4"
ctr = "0.9.2"
base64 = "0.22.1"