[package]
name = "nekohash"
version = "0.2.0"
edition = "2021"
authors = ["keirancc"]
description = "A multifaceted hashing library for Rust"
license = "MIT"
repository = "https://github.com/keirancc/nekohash"
keywords = ["hash", "anime", "cryptography"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
rand = "0.8"
aes = "0.8.4"
ctr = "0.9.2"
base64 = "0.22.1"

[dev-dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"

[[example]]
name = "demo"
path = "examples/demo.rs"
